<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".KnowledgeBaseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvProgramLang"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="18dp"
                    app:cardBackgroundColor="@color/tw_teal_500"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/programming_languages"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAndroidAppDev"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/tw_teal_500"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/android_app_development"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvWebDev"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="18dp"
                    app:cardBackgroundColor="@color/tw_teal_500"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/web_development"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvVcs"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/tw_teal_500"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/vcs"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAi"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="18dp"
                    app:cardBackgroundColor="@color/tw_teal_500"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/artificial_intelligence_ai"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMl"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/tw_teal_500"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/machine_learning_ml"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDb"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="18dp"
                    app:cardBackgroundColor="@color/tw_teal_500"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/database_db"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/e_mail"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnPhoneCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="100dp"
                android:text="@string/call_me"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>